--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,5 +47,6 @@
     },
     "home": "Home",
     "next": "Next",
-    "previous": "Previous"
+    "previous": "Previous",
+    "favorite": "Favorite"
 }
