--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -48,5 +48,6 @@
     "home": "Home",
     "next": "Next",
     "previous": "Previous",
-    "favorite": "Favorite"
+    "favorite": "Favorite",
+    "id": "Id"
 }
