--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -49,5 +49,8 @@
     "next": "Next",
     "previous": "Previous",
     "favorite": "Favorite",
-    "id": "Id"
+    "id": "Id",
+    "hp": "HP",
+    "attack": "Attack",
+    "defense": "Defense"
 }
